[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://src/ui/hud/GameHUD.gd" id="1_hud"]

[node name="GameHUD" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("1_hud")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="TopContainer" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="TimerLabel" type="Label" parent="VBox/TopContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "00:00"

[node name="Spacer" type="Control" parent="VBox/TopContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScoreLabel" type="Label" parent="VBox/TopContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Score: 0"

[node name="HealthContainer" type="VBoxContainer" parent="VBox"]
layout_mode = 2

[node name="HealthLabel" type="Label" parent="VBox/HealthContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Health: 100 / 100"

[node name="HealthBar" type="ProgressBar" parent="VBox/HealthContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 20)
max_value = 100.0
value = 100.0
show_percentage = false

[node name="XPContainer" type="VBoxContainer" parent="VBox"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="VBox/XPContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "LV 1"

[node name="XPBar" type="ProgressBar" parent="VBox/XPContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 15)
max_value = 100.0
show_percentage = false

[node name="Spacer2" type="Control" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="DebugContainer" type="VBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 8

[node name="FPSLabel" type="Label" parent="VBox/DebugContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "FPS: 60"
horizontal_alignment = 2